fixed forecast css
still slightly off center but working

--- a/src/style.css
+++ b/src/style.css
@@ -76,11 +76,12 @@ main {
 }
 .weather-forecast-day {
   margin-top: 30px;
+  font-size: 16px;
   text-align: center;
-  color: #384a52;
 }
 .weather-forecast-date {
-  font-size: 16px;
+  color: #384a52;
+  text-align: center;
   line-height: 20px;
   margin-bottom: 10px;
 }
@@ -88,10 +89,9 @@ main {
 .weather-forecast-icon {
   display: block;
   margin: 0 auto;
-  width: 65px;
-  height: 65px;
 }
 .weather-forecast-temperatures {
+  text-align: center;
   font-size: 14px;
   color: #384a52;
 }
